# gate-lock-home-node

./: .gitignore  CMakeLists.txt  README.md  flash_firmware.py  partitions_custom.csv  partitions_esp32c3.csv  partitions_esp32s3_16mb.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  sdkconfig.old  token_test.py  version.cmake
.github/workflows/: build.yml
apps/main_app/: CMakeLists.txt  sdkconfig.defaults
apps/main_app/main/: CMakeLists.txt
apps/safe_app/: CMakeLists.txt  sdkconfig.defaults
apps/safe_app/main/: CMakeLists.txt  home-node.c  idf_component.yml  routine_event_handler.c
components/gui-component/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/gui-component/include/: gui_op.h  lcd_device.h
components/gui-component/priv_include/: lvgl_port_sim.h  ui_defs.h  ui_home.h  ui_worker.h  wifi_icons.h
components/gui-component/priv_src/: home_screen.c  ui_worker.c
components/gui-component/src/: gui_op.c  gui_op_dummy.c  lcd_device.c  lcd_device_dummy.c
components/gui-interface/: gui_interface.h
components/http-server/: CMakeLists.txt  Readme.txt  http_server.c  http_server.h  idf_component.yml  relay_server.c  relay_server.h
components/mdns-service/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  mdns_service.c  mdns_service.h
components/ota-service/: CMakeLists.txt  KConfig.projbuild  Kconfig.projbuild  ota_service.c  ota_service.h
components/ota-service/cert/: Command.txt  Readme.txt  ca_cert.pem  github_certs.txt  github_com_certs.txt  github_io.pem  github_io_certs.txt  github_io_pem.txt  github_iocert.pem  gitusercontent_certs.txt  test_cert.txt
components/ota-service/modeling/ota/: project.conf
components/ota-service/modeling/ota/.runtime/: .save
components/ota-service/modeling/ota/.runtime/fragments/ota/.index/: index.dbr.0  index.idr.0
components/ota-service/modeling/ota/data/fragments/ota/model/Infrastructure.DiagramSet/: 2249a4df-8332-4aad-9500-a47c1af0b667.exml
components/ota-service/modeling/ota/data/fragments/ota/model/Infrastructure.ModuleComponent/: fdd8fbf5-614a-4164-972b-b040138ad4f7.exml
components/ota-service/modeling/ota/data/localmodel/: localmodel.dbf.0
components/sd-card-logging/: CMakeLists.txt  Kconfig  Readme.md  idf_component.yml  logger.c  logger.h
components/sd-card-logging/internals/: sd_mount.c  sd_mount.h
components/server-input-interface-adapter/: CMakeLists.txt  idf_component.yml  server_adapter.c  server_adapter.h
components/user-request/: CMakeLists.txt  Readme.txt  user_request.c  user_request.h
components/user-request-response/: CMakeLists.txt  Readme.txt  user_output.c  user_output.h
components/user_input/: CMakeLists.txt  idf_component.yml  user_buttons.h
components/user_input_not_used/: idf_component.yml  user_buttons.c
components/user_output/: CMakeLists.txt  user_output.c  user_output.h
main/: CMakeLists.txt  home-node.c  idf_component.yml  routine_event_handler.c  routine_event_handler.h  wait_signal_bits.h
ota/: index.html  ota-manifest-esp32.json  ota-manifest-esp32c3.json  ota-manifest-esp32s3.json
ota/beta/: channel-info.json  ota-manifest-esp32.json  ota-manifest-esp32c3.json
ota/stable/: channel-info.json  ota-manifest-esp32.json  ota-manifest-esp32c3.json  ota-manifest-esp32s3.json
scripts/: build.py  flash.py
(+4 files in other folders)
